correcting last section - footer spacing and the phone navbar spacing

--- a/style.css
+++ b/style.css
@@ -47,6 +47,13 @@ a {
   opacity: 0;
 }
 
+.phone-nav-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 5vh;
+}
+
 header {
   font-family: StretchProBasic;
   position: fixed;
@@ -391,6 +398,9 @@ img {
   align-items: center;
   justify-content: space-between;
   cursor: pointer;
+
+  -webkit-tap-highlight-color: transparent;
+  outline: none;
 }
 .price-category-toggle:hover {
   background: rgba(255, 255, 255, 0.07);
@@ -679,4 +689,18 @@ p {
   object-fit: contain;
   scale: 0.7;
   width: auto;
+}
+
+.footer-spacer {
+  background-color: rgb(5, 1, 1);
+  display: block;
+  width: 100%;
+  height: auto;
+  max-height: 20vh;
+  min-width: 150px;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
 }
